--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -89,10 +89,20 @@ import groovy.json.*
                 writeFile(file: CONFIG_FILE_DESTINATION, text: json);
 
                 // Copy paste failed scenarios from failed-scenarios-title.txt into email
+
+                                
+                                
+                def color = 'good' // Default color
+                 if (someCondition) {
+                    color = 'warning'
+                 } else if (anotherCondition) {
+                    color = 'danger'
+                 }
                 def fileContent = readFile(file: FAIED_SCENAROS_FILE_PATH).trim();
                 def lines = fileContent.readLines();
                 def formattedContent = '<br><br>' + lines.join('<br>');
-                slackSend channel: '#agency-ebiz-autobuild', message: '${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}'
+                slackSend channel: '#agency-ebiz-autobuild', message: "Build result: ${currentBuild.result}", color: color
+                
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
             publishHTML(target : [allowMissing: true,
