--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -101,7 +101,7 @@ import groovy.json.*
                 def fileContent = readFile(file: FAIED_SCENAROS_FILE_PATH).trim();
                 def lines = fileContent.readLines();
                 def formattedContent = '<br><br>' + lines.join('<br>');
-                slackSend channel: '#agency-ebiz-autobuild', message: "Build result: ${currentBuild.result}", color: color
+                slackSend channel: '#agency-ebiz-autobuild', message: "Build result: ${BUILD_URL}", color: color
                 
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
