--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -100,8 +100,7 @@ import groovy.json.*
                  }
                 def fileContent = readFile(file: FAIED_SCENAROS_FILE_PATH).trim();
                 def lines = fileContent.readLines();
-                def formattedContent = '<br><br>' + lines.join('<br>');
-                slackSend channel: '#agency-ebiz-autobuild', message: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}", color: color
+                slackSend channel: '#agency-ebiz-autobuild', message: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${lines}", color: color
                 
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
