Updated Jenkins file 9

--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -102,7 +102,7 @@ import groovy.json.*
                 def formattedContent = '\n\n' + lines.join('\n');
                 def lines = fileContent.readLines();
                 slackSend channel: '#agency-ebiz-autobuild', message: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}", color: color
-                
+                writeFile(file: FAIED_SCENAROS_FILE_PATH, text: "");
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
             publishHTML(target : [allowMissing: true,
