--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -98,10 +98,9 @@ import groovy.json.*
                  } else if (currentBuild.currentResult == "SUCCESS") {
                     color = 'good'
                  }
-                def fileContent = readFile(file: FAIED_SCENAROS_FILE_PATH).trim();
-                def formattedContent = '\n\n' + lines.join('\n');
-                def lines = fileContent.readLines();
-                slackSend channel: '#agency-ebiz-autobuild', message: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}", color: color
+                def fileContent = readFile(file: FAIED_SCENARIOS_FILE_PATH).trim()
+                def formattedContent = '\n\n' + fileContent.replaceAll(", ", "\n")
+                slackSend channel: '@Gennadiy Semenduyev', message: "${currentBuild.currentResult}: Please visit  ${env.BUILD_URL} for further information. ${formattedContent}", color: color
                 writeFile(file: FAIED_SCENAROS_FILE_PATH, text: "");
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
