Update jenkins file

--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -31,7 +31,9 @@ pipeline {
     }
     triggers {
         parameterizedCron('''
+            0 21 * * 0 %ENVIRONMENT=QA;PROJECTS=ARFP;RUN_ID=R5383;VERSION=v 8.4.0
             0 22 * * 0 %ENVIRONMENT=UAT;PROJECTS=ARFP;RUN_ID=R5383;VERSION=v 8.4.0
+            0 23 * * 0 %ENVIRONMENT=Production;PROJECTS=ARFP;RUN_ID=R5383;VERSION=v 8.4.0
         ''')
     }
     stages {
