Updated Jenkins file 2

--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -118,7 +118,7 @@ pipeline {
                  }
                 slackSend 
                   channel: read_config_file(EMAILS_SLACK_CONTACTS).agency-ebiz-autobuild, 
-                  message: "${currentBuild.currentResult}: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", 
+                  message: "${currentBuild.currentResult} run for ${params.ENVIRONMENT} environment: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", 
                   color: color
                   
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
