--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -116,11 +116,9 @@ pipeline {
                  } else if (currentBuild.currentResult == "SUCCESS") {
                     color = 'good'
                  }
-                slackSend 
-                  channel: read_config_file(EMAILS_SLACK_CONTACTS).agency-ebiz-autobuild, 
-                  message: "${currentBuild.currentResult} run for ${params.ENVIRONMENT} environment: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", 
-                  color: color
-                  
+
+                slackSend channel: "${read_config_file(EMAILS_SLACK_CONTACTS).agency-ebiz-autobuild}", message: "${currentBuild.currentResult} run for ${params.ENVIRONMENT} environment: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", color: color
+                
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
             publishHTML (target : [allowMissing: true,
