--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -11,6 +11,7 @@ def QA_CONFIG_FILE_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/environ
 def UAT_CONFIG_FILE_DESTINATION = 'E2E/ARFP-Stratasphere/cypress/fixtures/environment/uat-param.json';
 def TEST_RAIL_CONFIG_FILE_PATH = 'E2E/ARFP-Stratasphere/cypress.env.json';
 def REPORT_DIR = 'E2E/ARFP-Stratasphere/cypress/reports';
+def a = read_config_file(EMAILS_SLACK_CONTACTS).agencyEbizAutobuild;
 
 pipeline {
     agent {
@@ -40,9 +41,9 @@ pipeline {
             steps {
                 script {
                                      echo 'Hello Start ------------------------------------------------>>>>>>'
-                 echo read_config_file(EMAILS_SLACK_CONTACTS)
+                 echo a
                   echo 'Hello 1 between ------------------------------------------------>>>>>>'
-                 echo read_config_file(EMAILS_SLACK_CONTACTS).agencyEbizAutobuild
+                 echo a
                  echo 'Hello 2 between ------------------------------------------------>>>>>>'
                  echo '${read_config_file(EMAILS_SLACK_CONTACTS).agencyEbizAutobuild}'
                  echo 'Hello finish  ------------------------------------------------>>>>>>'
