--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -116,7 +116,7 @@ pipeline {
                     color = 'good'
                  }
                 def slackChannel = read_config_file(EMAILS_SLACK_CONTACTS).agencyEbizAutobuild;
-                slackSend channel: slackChannel, message: "${currentBuild.currentResult}: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", color: color
+                slackSend channel: slackChannel, message: "${currentBuild.currentResult} ${params.PROJECTS} run for ${params.ENVIRONMENT} environment: ${env.JOB_NAME} ${env.BUILD_NUMBER} (<${env.BUILD_URL}|Open>)", color: color
                 
                 sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
             }
