--- a/E2E/Strata-eBiz/Jenkinsfile
+++ b/E2E/Strata-eBiz/Jenkinsfile
@@ -21,7 +21,7 @@ import groovy.json.*
         ansiColor('xterm')
     }
     triggers {
-        cron("0 15 * * *")
+        cron("H 15 * * *")
     }
     stages {
         stage('Config file setup'){
