--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
 stages {
         stage('Test') {
             steps {
-                sh "cd C:\Jenkins\workspace"
+                sh "cd C:\\Jenkins\\workspace"
             sh "dir /AD /B"
             sh "dir /B"
             sh "cd ${CURRENT_PROJECT_PATH} && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --spec \"cypress/integration/step-definitions/agency-version-number/agency-version-number.feature\"";
