modified:   E2E/ARFP-Stratasphere/Jenkinsfile

--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -18,33 +18,32 @@ pipeline {
 stages {
         stage('Test') {
             steps {
-                sh "cd C:\\Jenkins\\workspace"
-            sh "dir /AD /B"
-            sh "dir /B"
-            sh "cd ${CURRENT_PROJECT_PATH} && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --spec \"cypress/integration/step-definitions/agency-version-number/agency-version-number.feature\"";
+            echo "dir /AD /B"
+            echo "dir /B"
+            sh "cd E2E/ARFP-Stratasphere && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --spec \"cypress/integration/step-definitions/agency-version-number/agency-version-number.feature\"";
             }
         }
 }
-    post{
-        always{
-            script {
-                // Config files clean up.
-                sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
-            }
-            publishHTML (target : [allowMissing: true,
-            alwaysLinkToLastBuild: true,
-            keepAll: true,
-            reportDir: REPORT_DIR,
-            reportFiles: 'cucumber-reports/cucumber-html-report/index.html',
-            reportName: 'Cucumber Report',
-            reportTitles: 'Cucumber Report']);
-            publishHTML (target : [allowMissing: true,
-            alwaysLinkToLastBuild: true,
-            keepAll: true,
-            reportDir: REPORT_DIR,
-            reportFiles: 'multi-html-report/index.html',
-            reportName: 'Multi HTML Report',
-            reportTitles: 'Multi HTML Report']);
-        }
-    }
+    // post{
+    //     always{
+    //         script {
+    //             // Config files clean up.
+    //             sh "cd ${CURRENT_PROJECT_PATH} && node ./cucumber-html-report.js";
+    //         }
+    //         publishHTML (target : [allowMissing: true,
+    //         alwaysLinkToLastBuild: true,
+    //         keepAll: true,
+    //         reportDir: REPORT_DIR,
+    //         reportFiles: 'cucumber-reports/cucumber-html-report/index.html',
+    //         reportName: 'Cucumber Report',
+    //         reportTitles: 'Cucumber Report']);
+    //         publishHTML (target : [allowMissing: true,
+    //         alwaysLinkToLastBuild: true,
+    //         keepAll: true,
+    //         reportDir: REPORT_DIR,
+    //         reportFiles: 'multi-html-report/index.html',
+    //         reportName: 'Multi HTML Report',
+    //         reportTitles: 'Multi HTML Report']);
+    //     }
+    // }
 }
