--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -39,7 +39,11 @@ stages {
         
         stage('Test') {
             steps {
+           
             echo "Hello ------------------------ 1"
+            sh 'dir /AD /B'
+            sh 'dir /B'
+            sh 'cd C:\Program Files (x86)\SmartBear'
             sh 'ls -d */'
             echo "Hello ------------------------ 2"
             sh "cd E2E/ARFP-Stratasphere && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --spec \"cypress/integration/step-definitions/agency-version-number/agency-version-number.feature\"";
