--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -36,13 +36,24 @@ stages {
                     }
                 }
             }
+
+               stage('List Folders') {
+            steps {
+                 bat 'dir "C:\\Program Files (x86)" /AD /B'
+            }
+               }
         
         stage('Test') {
             steps {
+                       script {
+          def programFilesX86 = env['ProgramFiles(x86)']
+          def pathToDirectory = "${programFilesX86}\\YourDirectory"
+          echo "Path to directory: ${pathToDirectory}"
+        }
            
             echo "Hello ------------------------ 1"
             sh 'ls -d */'
-            sh 'cd C:\\Program Files (x86)\\SmartBear'
+          //  sh 'cd C:\\Program Files (x86)\\SmartBear'
             sh 'ls -d */'
             echo "Hello ------------------------ 2"
             sh "cd E2E/ARFP-Stratasphere && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --spec \"cypress/integration/step-definitions/agency-version-number/agency-version-number.feature\"";
