--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -15,6 +15,7 @@ def REPORT_DIR = 'E2E/ARFP-Stratasphere/cypress/reports';
 pipeline {
     agent {
         docker {
+            
             label 'al2'
             image 'cypress/browsers:node18.12.0-chrome107'
             args '--ipc=host'
@@ -40,7 +41,7 @@ stages {
                stage('List Folders') {
             steps {
                 echo "Hello ------------------------ 1"
-                 bat 'dir "C:\\Program Files (x86)" /AD /B'
+                 sh 'ls -d "/path/to/Program Files (x86)"/*/'
                  echo "Hello ------------------------ 2"
             }
                }
