--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -26,8 +26,8 @@ pipeline {
 
         docker {
             label 'testexecute'
-            image 'cypress/browsers:node18.12.0-chrome107'
-            args '--ipc=host'
+            // image 'cypress/browsers:node18.12.0-chrome107'
+            // args '--ipc=host'
     }
     }
 
