--- a/E2E/ARFP-Stratasphere/Jenkinsfile
+++ b/E2E/ARFP-Stratasphere/Jenkinsfile
@@ -49,25 +49,19 @@ stages {
                stage('List Folders') {
             steps {
                 echo "Hello ------------------------ 1"
-                  bat 'dir /AD /B "C:\\*"'
+                  bat 'dir /AD /B "C:\\Program Files (x86)\\*"'
                  echo "Hello ------------------------ 2"
             }
                }
         
         stage('Test') {
             steps {
-                       script {
-          def programFilesX86 = env['ProgramFiles(x86)']
-          def pathToDirectory = "${programFilesX86}\\YourDirectory"
-          echo "Path to directory: ${pathToDirectory}"
-        }
-           
             echo "Hello ------------------------ 3"
-            bat 'dir /AD /B "C:\\*"'
+            bat 'dir /AD /B "C:\\Program Files\\*"'
           //  sh 'cd C:\\Program Files (x86)\\SmartBear'
             bat 'dir /AD /B "C:\\*"'
             echo "Hello ------------------------ 4"
-            sh "cd E2E/ARFP-Stratasphere && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --spec \"cypress/integration/step-definitions/agency-version-number/agency-version-number.feature\"";
+            bat "cd E2E/ARFP-Stratasphere && npm cache clean --force && npm ci --prefer-offline && npx cypress run --browser chrome --spec \"cypress/integration/step-definitions/agency-version-number/agency-version-number.feature\"";
             }
         }
 }
